--- a/app/views/abouts/_form.html.erb
+++ b/app/views/abouts/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.cktext_area :content,:ckeditor => {:uiColor => "#AADC6E", :toolbar => "mini"} %>
   </div>
   <div class="actions">
     <%= f.submit %>
