--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,15 @@
 		<link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="/css/styles/fonts.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="../fonts.googleapis.com/css@family=Droid+Sans_3A400,700" type="text/css" />
-		<link rel="stylesheet" href="../fonts.googleapis.com/css@family=Oxygen_3A400,300,700" type="text/css" />
-		<link rel="stylesheet" href="../fonts.googleapis.com/css@family=Headland+One" type="text/css" />
+		<link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Headland+One' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/css/styles/jackbox.css" type="text/css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/revolution/css/captions-original.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/revolution/css/captions.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/revolution/css/settings.css" media="screen" />
 		<link rel="stylesheet" href="/css/styles/jquery.jPlayer.css" type="text/css" media="screen" />
+		<%= javascript_include_tag :application %>
 		<script src="/js/modernizr.custom.all.js" type="text/javascript"></script>
 		<script src="/js/jquery.min.js" type="text/javascript"></script>
 		<script src="/js/jquery.easing.js" type="text/javascript"></script>
@@ -96,7 +97,7 @@
 		 											</div>
 		 										</li>
 		 										<li data-transition="random" data-slotamount="7" >
-		 											<img alt="" src="images/revolution/bg-3.jpg" />
+		 											<img alt="" src="/images/revolution/bg-3.jpg" />
 		 											<div class="tp-caption fade" data-easing="easeOutExpo" data-start="2000" data-speed="700" data-y="395" data-x="61">
 		 												<img alt="" src="/images/revolution/img-shadow2.png" />
 		 											</div>
