--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,6 +2,8 @@
 	<div class="middle_inner">
 		<br><br>
 		<center><h1>A Empresa</h1></center>
-
+    <article>
+      <%= @content.content.html_safe %>
+    </article>
 	</div> <!-- final div middle_inner-->
 </section> <!-- final middle section -->
