--- a/app/views/pages/products.html.erb
+++ b/app/views/pages/products.html.erb
@@ -2,6 +2,16 @@
 	<div class="middle_inner">
 		<br><br>
 		<center><h1>Nossos Produtos</h1></center>
-
+    <div class="entry">
+      <div class="one_third aligncenter">
+        <div class="featured_block">
+          <div class="cmsms_services_icon">
+            <img alt="" class="aligncenter" src="/images/img/home_1.png">
+          </div>
+          <h2>Para uma melhor educação</h2>
+          <p>Increase is guaranteed to have a great appearance on all sorts of devices, on large desktop screens as well as on tablets and mobiles. </p>
+        </div>
+      </div>
+    </div>
 	</div> <!-- final div middle_inner-->
 </section> <!-- final middle section -->
