--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,33 +7,17 @@
 
 						<section id="middle_content">
 							<div class="entry">
-								<div class="one_third aligncenter">
-									<div class="featured_block">
-										<div class="cmsms_services_icon">
-											<img alt="" class="aligncenter" src="/images/img/home_1.png">
-										</div>
-										<h2>Para uma melhor educação</h2>
-										<p>Increase is guaranteed to have a great appearance on all sorts of devices, on large desktop screens as well as on tablets and mobiles. </p>
-									</div>
-								</div>
-								<div class="one_third aligncenter">
-									<div class="featured_block">
-										<div class="cmsms_services_icon">
-											<img alt="" class="aligncenter" src="images/img/home_2.png">
-										</div>
-										<h2>Easy to Customize</h2>
-										<p>Increase template offers super flexibility for color editing and easily turns from a minimalistic style template into a juicy website with great animation effects.</p>
-									</div>
-								</div>
-								<div class="one_third last aligncenter">
-									<div class="featured_block">
-										<div class="cmsms_services_icon">
-											<img alt="" class="aligncenter" src="images/img/home_3.png">
-										</div>
-										<h2>Advanced SEO</h2>
-										<p>Increase is a  SEO-friendly HTML template. In features super-clean Css3  and HTML5 that  search engines will love, successfully crawl and index.</p>
-									</div>
-								</div>
+								<% @products.each do |product| %>
+				          <div class="one_third aligncenter">
+				            <div class="featured_block">
+				              <div class="cmsms_services_icon">
+				                <%= image_tag product.picture_url(:mini_thumb), :class => "aligncenter"  %>
+				              </div>
+				              <h2><%= product.name %></h2>
+				              <p><%= product.description %></p>
+				            </div>
+				          </div>
+				        <% end %>
 								<div class="cl"></div>
 								<div class="one_first">
 									<aside class="widget widget_text">
