--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -51,8 +51,7 @@
 																<%= link_to event.name, event %>
 															</h6>
 															<ul class="cmsms_category">
-																<li><a href="#">Design</a>, </li>
-																<li><a href="#">Corporate</a><li>
+																<li><%= link_to event.category.name, '#' %></li>
 															</ul>
 															<span class="cmsms_post_img"></span>
 														</header>
