--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@event) do |f| %>
+<%= form_for(@event, :html => { :multipart => true }) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -24,8 +24,13 @@
     <%= f.datetime_select :end_date %>
   </div>
   <div class="field">
-    <%= f.label :category %><br />
-    <%= f.text_field :category %>
+    <%= f.label :category_id %><br />
+    <% @categories = Category.all %>
+    <%= f.select :category_id, [["Selecione uma categoria", 0]]+ @categories.collect { |c| [c.name, c.id]}  %>
+  </div>
+  <div class="field">
+    <%= f.label :picture %><br />
+    <%= f.file_field :picture %>
   </div>
   <div class="field">
     <%= f.label :description %><br />
