--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -3,11 +3,58 @@
     <br><br>
     <center><h1>Blog</h1></center>
     <article>
-      <% @posts.each do |post| %>
-        <%= post.title %>
-        <%= post.excerpt %>
-        <%= post.author %>
-      <% end %>
+        <div class="post-blog">
+          
+          
+          
+        </div>
     </article>
+    <div class="entry_summary">
+      <section class="blog">
+        <% @posts.each do |post| %>
+          <article class="post hentry format-standard">
+            <div class="cmsms_info">
+              <div class="published">
+                <span class="cmsms_date_day"><%= post.created_at.strftime("%d") %></span>
+                <span class="cmsms_date_year_mounth"><%= post.created_at.strftime("%Y") %> <br><span class="mounth"><%= post.created_at.strftime("%b").upcase %></span></span>
+              </div>
+              <div class="cmsms_post_img" style="background-color:#fabe09;"></div>
+              <div class="cmsms_like"><a href="#" class="cmsmsLike"><span>0</span></a></div>
+            </div>  
+            <div class="ovh">
+              <header class="entry-header">
+                <div class="cmsms_media">
+                  <figure>
+                    <a href="openpost.html" class="preloader inBlog" style="background-image: none; height: auto; padding: 0px; "><span class="image_container_img"><span id="img1" class="p_img_container"><img src="images/img/bpost_1.jpg" alt="" class="fullwidth" style="opacity: 1; "><span class="image_rollover"></span></span></span>
+                      
+                    </a>
+                  </figure>
+                </div>
+                <div class="cmsms_title">
+                  <h1 class="entry-title"><a href="openpost.html"><%= post.title %></a></h1>
+                </div>
+                <div class="cmsms_post_info">
+                  <span class="user_name">By <%= post.author %></span>&nbsp;&nbsp;/&nbsp;&nbsp;
+                  <span>Em <a href="#">Corporate</a>, <a href="#">Business</a>&nbsp;&nbsp;/&nbsp;&nbsp;</span>
+                  <span>(0) <a href="#" class="cmsms_comments">Comments</a></span>
+                </div>
+              </header>
+              <div class="cl"></div>
+              <div class="entry-content">
+                <p><%= post.excerpt %></p>
+              </div>
+              <%= link_to 'Leia mais..', post, :class => "post_link cmsms_more" %>
+              <div class="divider"></div>
+              <footer class="entry-meta">
+                <ul class="cmsms_tags">
+                  <li>Tags: <a href="openpost.html">Business</a>, </li>
+                  <li><a href="openpost.html">Corporate</a></li>
+                </ul>
+              </footer>
+            </div>
+          </article>
+        <% end %>
+      </section>
+    </div>
   </div> <!-- final div middle_inner-->
 </section> <!-- final middle section -->
