--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@comment) do |f| %>
+<%= form_for(@comment,:html => {:id =>"commentform"}) do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -10,17 +10,25 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :user_name %><br />
+  <h2>Leave a Reply</h2>
+  <p>
+    <%= f.label :user_name %><span class="color2">*</span>
     <%= f.text_field :user_name %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br />
+  </p>
+  <p>
+    <%= f.label :email %><span class="color2">*</span>
+    <%= f.text_field :email %>
+  </p>
+  <p>
+    <%= f.label :site %><span class="color2">*</span>
+    <%= f.text_field :site %>
+  </p>
+  <p>
     <%= f.text_area :body %>
-  </div>
-  <%= f.hidden_field :post_id %>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  </p>
+  <p>
+     <%= f.submit "Adicionar Comentário", :class => "button" %>
+  </p>
+  <div class="cl"></div>
+   <%= f.hidden_field :post_id %>
 <% end %>
